@@ -1,3 +1,8 @@
+Thu Aug  6 17:25:38 1998  Werner Koch,mobil,,,	(wk@tobold)
+
+	* random.c (get_random_byte): Removed and changed all callers
+	to use get_random_bits()
+
 Mon Jul 27 10:30:22 1998  Werner Koch  (wk@(none))
 
 	* cipher.c : Support for other blocksizes
